test_suite/alan-2022-examples/passing/000330_deriv.alan
source r begin leave 9 - 89 end
