test_suite/alan-2022-examples/failing/004050_mutation.alan
source At begin leave(1 get sm15a end
